- feature: 开启预览特性；